--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
 	<groupId>com.tucotizador</groupId>
 	<artifactId>tucotizador</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+<packaging>jar</packaging>
+
 	<name>tucotizador</name>
 	<description>app tucotizador</description>
 	<url/>
@@ -31,10 +32,7 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -46,11 +44,7 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
+		
 
 <dependency>
   <groupId>org.apache.httpcomponents</groupId>
