--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,9 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		    <maven.test.skip>true</maven.test.skip>
 	</properties>
+	
 	<dependencies>
 		
 		<dependency>
